# excel-ai-assistant

./: .coveragerc  .gitignore  LICENSE  README.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.bat  run_tests.sh
.github/workflows/: tests.yml
app/: config.py
app/services/: api_manager.py  data_manager.py  ollama_api_manager.py  visualization_manager.py
app/ui/: main_window.py
app/ui/components/: batch_processor.py  status_bar.py  treeview.py
app/ui/dialogs/: about_dialog.py  ollama_settings_dialog.py  preferences_dialog.py  prompt_manager_dialog.py  visualization_dialog.py
app/utils/: logger.py  theme_manager.py
design/mockups/: mock-screenshot.tsx  ollama-settings-screenshot.tsx  preferences-screenshot.tsx  prompt-templates-screenshot.tsx
docs/: FEATURE_ENHANCEMENT_PLAN.md  IMPLEMENTATION_EXAMPLES.md  META_PROMPT_TEMPLATES.md  TESTING.md  mockups_gallery.md  ollama_setup.md
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_batch_processing.py
tests/unit/: __init__.py  test_api_manager.py  test_config.py  test_data_manager.py  test_ollama_api_manager.py
